fixed items not showing when >600px

--- a/projects.css
+++ b/projects.css
@@ -108,7 +108,7 @@ a {
 }
 
 .text-item.active .text-desc {
-  max-height: 600px;
+  max-height: 100%;
   transition: 0.7s linear;
 }
 
